# FFmepgCmakeTest

./: README.md
app/: CMakeLists.txt  build.gradle
app/libs/include/libavutil/: ffversion.h
app/src/androidTest/java/com/example/siqing/ffmpegtestcmake/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/java/com/example/siqing/ffmpegtestcmake/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/example/siqing/ffmpegtestcmake/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
